--- a/assets/components/atoms/button/button.yml
+++ b/assets/components/atoms/button/button.yml
@@ -1,2 +1,9 @@
 title: Button
 name: button
+notes: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Deinde prima illa, quae in congressu solemus: Quid tu, inquit, huc? Est enim effectrix multarum et magnarum voluptatum. [truc](#) sequuntur igitur? Tu quidem reddes; Avaritiamne minuis? Duo Reges: **constructio** interrete. Quarum ambarum rerum cum medicinam pollicetur, luxuriae licentiam pollicetur.
+
+Apud imperitos tum illa dicta sunt, aliquid etiam coronae datum; Consequens enim est et post oritur, ut dixi. Primum divisit ineleganter; Age nunc isti doceant, vel tu potius quis enim ista melius? Ita enim vivunt quidam, ut eorum vita refellatur oratio. Sed ad haec, nisi molestum est, habeo quae velim. Videsne quam sit magna dissensio?
+
+Tu vero, inquam, ducas licet, si sequetur; Summum ením bonum exposuit vacuitatem doloris; Res enim fortasse verae, certe graves, non ita tractantur, ut debent, sed aliquanto minutius. Certe, nisi voluptatem tanti aestimaretis."
+variants:
+  - danger
