--- a/assets/components/atoms/button/button.yml
+++ b/assets/components/atoms/button/button.yml
@@ -5,5 +5,13 @@ notes: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Deinde prima il
 Apud imperitos tum illa dicta sunt, aliquid etiam coronae datum; Consequens enim est et post oritur, ut dixi. Primum divisit ineleganter; Age nunc isti doceant, vel tu potius quis enim ista melius? Ita enim vivunt quidam, ut eorum vita refellatur oratio. Sed ad haec, nisi molestum est, habeo quae velim. Videsne quam sit magna dissensio?
 
 Tu vero, inquam, ducas licet, si sequetur; Summum ením bonum exposuit vacuitatem doloris; Res enim fortasse verae, certe graves, non ita tractantur, ut debent, sed aliquanto minutius. Certe, nisi voluptatem tanti aestimaretis."
+background: "#000"
 variants:
-  - danger
+  - name: danger
+    title: Dangerous button
+    notes: |
+      Lorem ipsum dolor sit **amet**, consectetur adipiscing elit. Non quam nostram quidem
+  - primary
+  - name: secondary
+    title: Secondary button
+    background: "orange"
