--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toolbox",
-  "version": "0.1.0",
+  "version": "0.0.7",
   "license": "MIT",
   "main": "index.html",
   "scripts": {
@@ -31,6 +31,9 @@
       "assets/sass/main.scss",
       "assets/sass/main-variables.scss"
     ],
+    "plugins": [
+      "stylelint-order"
+    ],
     "extends": "stylelint-config-standard",
     "rules": {
       "at-rule-no-vendor-prefix": true,
@@ -38,44 +41,44 @@
       "property-no-vendor-prefix": true,
       "selector-no-vendor-prefix": true,
       "value-no-vendor-prefix": true,
-      "selector-pseudo-element-colon-notation": "single"
-    },
-    "order/order": [
-      "custom-properties",
-      "dollar-variables",
-      "declarations",
-      "at-rules",
-      "rules"
-    ],
-    "order/properties-order": [
-      "content",
-      "display",
-      "flex",
-      "position",
-      "top",
-      "right",
-      "bottom",
-      "left",
-      "float",
-      "width",
-      "height",
-      "margin",
-      "padding",
-      "background",
-      "border",
-      "font-familly",
-      "font-size",
-      "line-height",
-      "font-weight",
-      "font-style",
-      "color",
-      "transform",
-      "transition"
-    ]
+      "selector-pseudo-element-colon-notation": "single",
+      "order/order": [
+        "custom-properties",
+        "dollar-variables",
+        "declarations",
+        "at-rules",
+        "rules"
+      ],
+      "order/properties-order": [
+        "content",
+        "display",
+        "flex",
+        "position",
+        "top",
+        "right",
+        "bottom",
+        "left",
+        "float",
+        "width",
+        "height",
+        "margin",
+        "padding",
+        "background",
+        "border",
+        "font-familly",
+        "font-size",
+        "line-height",
+        "font-weight",
+        "font-style",
+        "color",
+        "transform",
+        "transition"
+      ]
+    }
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.2.1",
-    "toolbox-utils": "latest"
+    "toolbox-utils": "^1.3.2"
   }
 }
